--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,7 +15,6 @@ html {
  */
 
 body {
-  margin: 0;
   color: #244751;
   background-color: #eee;
   font-family: 'Roboto Condensed', sans-serif;
@@ -26,8 +25,10 @@ body {
  */
 
 main {
-  overflow: auto;
   margin: auto;
+  margin-top: 80px;
   width: 450px;
+  height: 600px;
   background-color: white;
+  padding: 7px;
  }
