--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -5,7 +5,7 @@ section h2 {
 }
 
 section {
-  border: 1px solid silver;
+  border: 1px solid gray;
   background-color: whitesmoke;
   border-radius: 10px;
   padding: 7px;
