--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,20 +1,25 @@
 
-
-section h2 {
-  border-bottom: 1px solid black;
-}
-
 section {
-  border: 1px solid gray;
+  border: 1px solid silver;
   background-color: whitesmoke;
   border-radius: 10px;
-  padding: 7px;
 }
 
-section textarea {
+section.new-tweet h2 {
+  margin-top: 0px;
+  border-bottom: 1px solid silver;
+}
+
+section.new-tweet {
+  padding: 10px;
+}
+
+section.new-tweet textarea {
   width: 100%;
+  margin-top: 0px;
+  margin-bottom: 5px;
 }
 
-section span {
+section.new-tweet span {
   float: right;
 }
