jquery, ajax and form validation update

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -20,3 +20,20 @@
   float: left;
   padding-right: 10px;
 }
+
+#nav-bar .compose {
+  float: right;
+  margin-top: 10px;
+}
+
+#nav-bar .compose button {
+  border-radius: 15px;
+  height: 50px;
+  width: 100px;
+}
+
+#nav-bar:hover .compose button {
+  cursor: pointer;
+  border: 1px solid black;
+  background-color: whitesmoke;
+}
