--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -16,6 +16,7 @@ section.new-tweet textarea {
   width: 100%;
   margin-top: 0px;
   margin-bottom: 5px;
+  z-index: 0;
 }
 
 section.new-tweet span {
