--- a/sass/tweet.scss
+++ b/sass/tweet.scss
@@ -1,33 +1,8 @@
-section #allTweets {
-  border: 1px solid white;
-}
 
-article.tweet {
-  border: 1px solid silver;
-  margin-bottom: 15px;
-}
-
-article.tweet a:link {
-  visibility: hidden;
-}
-
-article.tweet:hover a {
-  color: #39dbdb;
-  visibility: visible;
-}
-
-article.tweet header {
-  background-color: whitesmoke;
-  overflow: auto;
-  padding: 10px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-article.tweet p {
-  background-color: white;
-  padding: 10px;
-  word-wrap: break-word;
+section {
+  #allTweets {
+    border: 1px solid white;
+  }
 }
 
 .tweet {
@@ -35,50 +10,99 @@ article.tweet p {
   border-radius: 10px;
 }
 
-article.tweet:hover {
-  border: 1px solid black;
-}
+article {
 
-article.tweet footer {
-  padding: 7px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  border-top: 1px solid silver;
-  overflow: auto;
-}
+  &.tweet {
 
-article.tweet header .name {
-  float: left;
-  font-size: 20px;
-  font-weight: bold;
-  color: gray;
-}
+    border: 1px solid silver;
+    margin-bottom: 15px;
 
-article.tweet:hover header .name {
-  color: black;
-}
+    &:hover {
 
-article.tweet header .login {
-  float: right;
-  color: gray;
-  padding-top: 3px;
-}
+      border: 1px solid black;
 
-article.tweet header .logo {
-  float: left;
-  margin-right: 10px;
-}
+      a {
+        color: #39dbdb;
+        visibility: visible;
+      }
 
-article.tweet:hover header .logo {
-  transform: scale(1.1);
-}
+      header {
 
-article.tweet footer .time {
-  float: left;
-}
+        .name {
+          color: black;
+        }
 
-article.tweet footer i {
-  float: right;
-  margin-right: 5px;
-  text-decoration: none;
+        .logo {
+          transform: scale(1.1);
+        }
+
+      }
+
+    }
+
+    a {
+
+      &:link {
+        visibility: hidden;
+      }
+
+    }
+
+    p {
+      background-color: white;
+      padding: 10px;
+      word-wrap: break-word;
+    }
+
+    header {
+
+      background-color: whitesmoke;
+      overflow: auto;
+      padding: 10px;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+
+      .name {
+
+        float: left;
+        font-size: 20px;
+        font-weight: bold;
+        color: gray;
+
+      }
+
+      .login {
+        float: right;
+        color: gray;
+        padding-top: 3px;
+      }
+
+      .logo {
+
+        float: left;
+        margin-right: 10px;
+
+      }
+
+    }
+
+    footer {
+
+      padding: 7px;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+      border-top: 1px solid silver;
+      overflow: auto;
+
+      i {
+        float: right;
+        margin-right: 5px;
+        text-decoration: none;
+      }
+
+      .time {
+        float: left;
+      }
+    }
+  }
 }
