update stylesheet to consider user login features

--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -29,6 +29,8 @@
       border-radius: 15px;
       height: 50px;
       max-width: 100px;
+      margin-right: 10px;
+      top: 0px;
 
       &:hover {
         cursor: pointer;
