--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -59,6 +59,8 @@ main {
   border-radius: 15px;
   height: 50px;
   max-width: 100px;
+  margin-right: 10px;
+  top: 0px;
 }
 #nav-bar .compose button:hover {
   cursor: pointer;
@@ -161,6 +163,27 @@ article.tweet footer i {
 }
 article.tweet footer .time {
   float: left;
+}
+
+section.new-register {
+  border: 1px solid silver;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  margin-bottom: 15px;
+  padding: 10px;
+}
+section.new-register h2 {
+  margin-top: 0px;
+  border-bottom: 1px solid silver;
+}
+section.new-register textarea {
+  width: 100%;
+  margin-top: 0px;
+  margin-bottom: 5px;
+  z-index: 0;
+}
+section.new-register span {
+  float: right;
 }
 
 /*# sourceMappingURL=style.css.map */
