--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,6 +3,9 @@
 
 <section class="new-register">
   <h3>Register</h3>
+  <% if (locals.error) { %>
+    <p class="alert alert-danger"><%= error %></p>
+  <% } %>
   <form action="/users/register" method="POST" id="register">
     <span class="field">Name:</span><p><input type=text name="fullname" id=fullname></p>
     <span class="field">Handle:</span><p><input type=text name="handle" id=handle></p>
