--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -51,4 +51,7 @@
     <!-- Page-specific (main) content here -->
     <main>
 
+      <% if (myUser) { %><p>Welcome, <%=myName%> (<%=myUser%>)</p><% } %>
+
       <p>
+
